--- a/Calculator/style.css
+++ b/Calculator/style.css
@@ -1,18 +1,19 @@
-body{
-display: grid;
-  height: 100vh;
-place-items: center;
+body {
+    display: grid;
+    height: 100vh;
+    place-items: center;
 }
+
 .container {
 
     border-radius: 9px;
-background: #ffffff;
-box-shadow:  7px 7px 42px #d6d6d6,
-             -7px -7px 42px #ffffff;
+    background: #ffffff;
+    box-shadow: 7px 7px 42px #d6d6d6,
+        -7px -7px 42px #ffffff;
 
     width: 300px;
     height: 400px;
-padding: 10px;
+    padding: 10px;
 
 }
 
@@ -26,7 +27,7 @@ padding: 10px;
 
     padding: 10px;
 
-    margin:auto;
+    margin: auto;
 
 }
 
@@ -48,24 +49,27 @@ padding: 10px;
 
     color: #333;
 
-    background-image: linear-gradient(to bottom, transparent, transparent 50%, rgba(0,0,0,.04));
+    background-image: linear-gradient(to bottom, transparent, transparent 50%, rgba(0, 0, 0, .04));
 
-    box-shadow: inset 0 0 0 1px rgba(255,255,255,.05), inset 0 1px 0 0 rgba(255,255,255,.45), inset 0 -1px 0 0 rgba(255,255,255,.15), 0 1px 0 0 rgba(255,255,255,.15);
+    box-shadow: inset 0 0 0 1px rgba(255, 255, 255, .05), inset 0 1px 0 0 rgba(255, 255, 255, .45), inset 0 -1px 0 0 rgba(255, 255, 255, .15), 0 1px 0 0 rgba(255, 255, 255, .15);
 
-    text-shadow: 0 1px rgba(255,255,255,.4);
+    text-shadow: 0 1px rgba(255, 255, 255, .4);
 
 }
-input{
-outline: none;
-  border: 1px solid transparent;
+
+input {
+    outline: none;
+    border: 1px solid transparent;
 }
+
 .button:hover {
 
     background-color: #eaeaea;
 
 }
+
 .operator {
-font-size: 1.4rem;
+    font-size: 1.4rem;
     background-color: lightgreen;
 
 }
@@ -80,7 +84,7 @@ font-size: 1.4rem;
 
     width: 80px;
 
-    height: 40px;  
+    height: 40px;
 
 }
 
@@ -106,9 +110,9 @@ font-size: 1.4rem;
 
 }
 
-.screen{
+.screen {
 
-    background-color:rgb(171, 219, 231);
+    background-color: rgb(171, 219, 231);
 
     justify-content: left;
 
@@ -122,7 +126,7 @@ font-size: 1.4rem;
 
     cursor: default;
 
-    padding: 10px; 
+    padding: 10px;
 
     padding-left: 40%;
 
