--- a/Weather App/style.css
+++ b/Weather App/style.css
@@ -1,18 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
+
 * {
     box-sizing: border-box;
 }
+
 body {
     margin: 0;
     font-family: "Poppins", sans-serif;
     background-color: #25282A;
     display: flex;
     justify-content: center;
-  color: #fff;
+    color: #fff;
     align-items: center;
     min-height: 100vh;
     flex-direction: column;
 }
+
 input {
     padding: 1rem;
     border-radius: 10px;
@@ -23,32 +26,41 @@ input {
     min-width: 300px;
     font-size: 1rem;
 }
+
 input:focus {
     outline: none;
 }
+
 .weather {
     text-align: center;
     font-size: 2rem;
 }
+
 .weather h2 {
     margin-bottom: 0;
     display: flex;
     align-items: center;
-} /* .weather img{ transform: scale(2); } */@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
+}
+
+/* .weather img{ transform: scale(2); } */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
+
 * {
     box-sizing: border-box;
 }
+
 body {
     margin: 0;
     font-family: "Poppins", sans-serif;
     background-color: #25282A;
     display: flex;
     justify-content: center;
-  color: #fff;
+    color: #fff;
     align-items: center;
     min-height: 100vh;
     flex-direction: column;
 }
+
 input {
     padding: 1rem;
     border-radius: 10px;
@@ -59,15 +71,20 @@ input {
     min-width: 300px;
     font-size: 1rem;
 }
+
 input:focus {
     outline: none;
 }
+
 .weather {
     text-align: center;
     font-size: 2rem;
 }
+
 .weather h2 {
     margin-bottom: 0;
     display: flex;
     align-items: center;
-} /* .weather img{ transform: scale(2); } */
+}
+
+/* .weather img{ transform: scale(2); } */
